[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/BuildingPlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://Assets/towerbutton_pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/towerButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/towerButton_hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/road1.png" type="Texture" id=6]
[ext_resource path="res://Assets/road2.png" type="Texture" id=7]
[ext_resource path="res://Assets/road3.png" type="Texture" id=8]
[ext_resource path="res://Assets/road4.png" type="Texture" id=9]
[ext_resource path="res://Assets/PlaymegamesReguler-2OOee.ttf" type="DynamicFontData" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 260.837, 43.2429, 0, 0, 0, 0, 83.3478, 43.2429, 0, 0, 0, 0, 82.1464, 155.113 )
}

[sub_resource type="DynamicFont" id=3]
size = 200
font_data = ExtResource( 10 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.211765 )
position = Vector2( 166.005, 89.9808 )
scale = Vector2( 1.1226, 1.1226 )
frames = SubResource( 1 )
speed_scale = 2.0
playing = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 82.1464, 155.113 )
offset = 499.47

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="GUI" type="CanvasLayer" parent="."]

[node name="CashLabel" type="Label" parent="GUI"]
anchor_left = -0.00219232
anchor_top = 0.00374156
anchor_right = -0.00219226
anchor_bottom = 0.00374156
margin_left = 156.597
margin_top = 8.43877
margin_right = 1109.6
margin_bottom = 177.439
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 3 )
text = "Cash: 10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="GUI"]
margin_left = 213.193
margin_top = 103.945
margin_right = 245.193
margin_bottom = 140.945
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingPlatform" parent="." instance=ExtResource( 1 )]
position = Vector2( 220.468, 76.2802 )

[node name="BuildingPlatform2" parent="." instance=ExtResource( 1 )]
position = Vector2( 119.349, 77.1535 )

[node name="BuildingPlatform3" parent="." instance=ExtResource( 1 )]
position = Vector2( 165.559, 79.6791 )

[node name="BuildingPlatform4" parent="." instance=ExtResource( 1 )]
position = Vector2( 41.8322, 119.481 )

[node name="BuildingPlatform5" parent="." instance=ExtResource( 1 )]
position = Vector2( 40.2754, 71.2425 )

[node name="BuildingPlatform7" parent="." instance=ExtResource( 1 )]
position = Vector2( 41.8679, 25.7316 )

[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="pressed" from="GUI/TextureButton" to="." method="_on_TextureButton_pressed"]
